--- a/tanhua-dubbo/tanhua-dubbo-mongo/pom.xml
+++ b/tanhua-dubbo/tanhua-dubbo-mongo/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>tanhua-dubbo-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
